--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "axe-core-npm",
   "private": true,
+  "license": "MPL-2.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "fmt": "prettier --write *.{md,js,json}",
-    "lint": "eslint *.js"
+    "lint": "eslint *.js",
+    "bootstrap": "lerna bootstrap"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
