--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,17 +27,12 @@ jobs:
       - restore_cache:
           keys:
             - v1-root-npm-{{ checksum "package-lock.json" }}
-      - run:
-          name: Install top-level dependencies
-          command: npm install --ci
+      - run: npm install --ci
       - save_cache:
           key: v1-root-npm-{{ checksum "package-lock.json" }}
           paths:
             - node_modules
-      - run:
-          name: Install package dependencies
-          command: npm run bootstrap
-          no_output_timeout: 5m
+      - run: npm run bootstrap
       - save_cache:
           key: v1-npm-cache-{{ .Environment.CIRCLE_SHA1 }}
           paths:
