--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,9 @@ jobs:
       - restore_cache:
           keys:
             - v1-cli-npm-{{ checksum "packages/cli/package-lock.json" }}
+      - restore_cache:
+          keys:
+            - v1-puppeteer-npm-{{ checksum "packages/puppeteer/package-lock.json" }}
       - run: npm ci
       - save_cache:
           key: v1-root-npm-{{ checksum "package-lock.json" }}
@@ -37,14 +40,19 @@ jobs:
             - node_modules
       - run: npm run bootstrap
       - save_cache:
+          key: v1-cli-npm-{{ checksum "packages/cli/package-lock.json" }}
+          paths:
+            - packages/cli/node_modules
+      - save_cache:
+          key: v1-puppeteer-npm-{{ checksum "packages/puppeteer/package-lock.json" }}
+          paths:
+            - packages/puppeteer/node_modules
+      - save_cache:
           key: v1-npm-cache-{{ .Environment.CIRCLE_SHA1 }}
           paths:
             - node_modules
             - packages/cli/node_modules
-      - save_cache:
-          key: v1-cli-npm-{{ checksum "packages/cli/package-lock.json" }}
-          paths:
-            - packages/cli/node_modules
+            - packages/puppeteer/node_modules
 
   lint:
     <<: *defaults
@@ -60,6 +68,14 @@ jobs:
       - restore_dependency_cache
       - run: npm run test --prefix=packages/cli
 
+  puppeteer:
+    <<: *defaults
+    steps:
+      - checkout
+      - restore_dependency_cache
+      - run: npm run build --prefix=packages/puppeteer
+      - run: npm run coverage --prefix=packages/puppeteer
+
 workflows:
   version: 2
   build_and_test:
@@ -69,5 +85,8 @@ workflows:
           requires:
             - dependencies
       - cli:
+          requires:
+            - lint
+      - puppeteer:
           requires:
             - lint
