--- a/packages/reporter-earl/package.json
+++ b/packages/reporter-earl/package.json
@@ -1,6 +1,6 @@
 {
   "name": "axe-reporter-earl",
-  "version": "0.1.0",
+  "version": "4.0.0-pre.0",
   "description": "A EARL+JSON-LD reporter for axe-core",
   "main": "dist/axeReporterEarl.js",
   "scripts": {
