--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -101,21 +101,21 @@ jobs:
       - run: npm run coverage --prefix=packages/puppeteer
 
   webdriverjs:
-      <<: *defaults
-      steps: 
-        - checkout
-        - restore_dependency_cache
-        - run: npm run test --prefix=packages/webdriverjs
+    <<: *defaults
+    steps:
+      - checkout
+      - restore_dependency_cache
+      - run: npm run test --prefix=packages/webdriverjs
 
   webdriverio:
     <<: *defaults
-    steps: 
+    steps:
       - checkout
       - restore_dependency_cache
       - run: npm run test --prefix=packages/webdriverio
   reporter-earl:
     <<: *defaults
-    steps: 
+    steps:
       - checkout
       - restore_dependency_cache
       - run: npm run test --prefix=packages/reporter-earl
@@ -128,7 +128,15 @@ jobs:
       - restore_dependency_cache
       # Make sure the working tree is clean
       - run: git reset --hard HEAD
-      - run: npx lerna publish prepatch --no-verify-access --no-git-tag-version --no-push --dist-tag=next --pre-dist-tag=next --exact --preid=${CIRCLE_SHA1:0:8} --force-publish --yes
+      - run: npx lerna publish prepatch \
+          --no-verify-access \
+          --no-git-tag-version \
+          --no-push \
+          --canary \
+          --dist-tag=next \
+          --exact \
+          --force-publish \
+          --yes
 
   production_release:
     <<: *defaults
@@ -175,7 +183,9 @@ workflows:
             - reporter-earl
           filters:
             branches:
-              only: develop
+              only: 
+                - develop
+                - canary_release # TODO: remove after testing
       - production_release:
           context: html-tools
           requires:
