--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -185,7 +185,7 @@ workflows:
             branches:
               only: 
                 - develop
-                - canary_release # TODO: remove after testing
+                - fix-release-script # TODO: remove after testing
       - production_release:
           context: html-tools
           requires:
