--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -128,15 +128,7 @@ jobs:
       - restore_dependency_cache
       # Make sure the working tree is clean
       - run: git reset --hard HEAD
-      - run: npx lerna publish prepatch \
-          --no-verify-access \
-          --no-git-tag-version \
-          --no-push \
-          --canary \
-          --dist-tag=next \
-          --exact \
-          --force-publish \
-          --yes
+      - run: npx lerna publish prepatch --no-verify-access --no-git-tag-version --no-push --canary --dist-tag=next --exact --force-publish --yes
 
   production_release:
     <<: *defaults
