fix: Make packages public
This patch makes the `@axe-core/*` packages _public_ rather than private.

--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -5,6 +5,9 @@
   "license": "MPL-2.0",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "contributors": [
     {
       "name": "Sushil Nagi",
