--- a/packages/puppeteer/package.json
+++ b/packages/puppeteer/package.json
@@ -8,6 +8,9 @@
   },
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "tsc",
     "test": "mocha",
