--- a/packages/reporter-earl/package.json
+++ b/packages/reporter-earl/package.json
@@ -10,6 +10,9 @@
     "build": "tsc",
     "prepublishOnly": "npm run build"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "coverageReporters": [
     "clover"
   ],
