--- a/packages/webdriverjs/package.json
+++ b/packages/webdriverjs/package.json
@@ -4,6 +4,9 @@
   "description": "Provides a method to inject and analyze web pages using aXe",
   "license": "MPL-2.0",
   "main": "dist/index.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "contributors": [
     {
       "name": "Dylan Barrell",
