--- a/packages/webdriverjs/package.json
+++ b/packages/webdriverjs/package.json
@@ -78,8 +78,7 @@
   },
   "dependencies": {
     "axe-core": "^3.4.1",
-    "babel-runtime": "^6.26.0",
-    "depd": "^2.0.0"
+    "babel-runtime": "^6.26.0"
   },
   "nyc": {
     "reporter": [
