--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,7 +2,7 @@
   "name": "@axe-core/cli",
   "version": "4.0.0-pre.0",
   "description": "A CLI for accessibility testing using axe-core",
-  "main": "lib/axe-test-urls.js",
+  "main": "lib/index.js",
   "bin": {
     "axe": "axe-cli"
   },
