chore(cli): use `node` to execute postinstall scripts

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "test": "mocha test/*.js",
-    "postinstall": "./postinstall.js"
+    "postinstall": "node postinstall.js"
   },
   "repository": {
     "type": "git",
