chore(puppeteer): Only include `dist` files in npm package

--- a/packages/puppeteer/package.json
+++ b/packages/puppeteer/package.json
@@ -8,6 +8,9 @@
   },
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
+  "files": [
+    "/dist"
+  ],
   "publishConfig": {
     "access": "public"
   },
