--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -34,7 +34,7 @@
     "url": "http://github.com/wilcofiers/"
   },
   "dependencies": {
-    "@axe-core/webdriverjs": "^4.0.0-alpha.33",
+    "@axe-core/webdriverjs": "4.0.0-pre.0",
     "axe-core": "^3.2.2",
     "chromedriver": "latest",
     "colors": "^1.4.0",
