--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
           key: v1-root-npm-{{ checksum "package-lock.json" }}
           paths:
             - node_modules
-      - run: npm run bootstrap
+      - run: npm run bootstrap -- --ci
       - save_cache:
           key: v1-cli-npm-{{ checksum "packages/cli/package-lock.json" }}
           paths:
@@ -90,6 +90,8 @@ jobs:
     steps:
       - checkout
       - restore_dependency_cache
+      # Re-build packages, ensuring packages/webdriverjs/dist exists.
+      - run: npx lerna run prepare
       - run: npm run test --prefix=packages/cli
 
   puppeteer:
