feat(cli): replace axe-webdriverjs in favor of @axe-core/webdriverjs (#51)
Co-authored-by: Stephen Mathieson <me@stephenmathieson.com>

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -34,8 +34,8 @@
     "url": "http://github.com/wilcofiers/"
   },
   "dependencies": {
+    "@axe-core/webdriverjs": "4.0.0-pre.0",
     "axe-core": "^3.2.2",
-    "axe-webdriverjs": "^2.2.0",
     "chromedriver": "latest",
     "colors": "^1.4.0",
     "commander": "^2.19.0",
