--- a/.github/workflows/sync-master-develop.yml
+++ b/.github/workflows/sync-master-develop.yml
@@ -13,6 +13,6 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           pr-title: "chore: merge master into develop"
-          pr-reviewers: scurker,stephenmathieson
+          pr-reviewers: michael-siek,stephenmathieson
           pr-labels: chore
           pr-template: .github/PULL_REQUEST_TEMPLATE.md
