feat: add `@axe-core/react`

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,9 @@ defaults: &defaults
     - image: circleci/node:12-browsers
   working_directory: ~/axe-core-npm
 
+orbs:
+  cypress: cypress-io/cypress@1.25.0
+
 commands:
   configure_npm:
     description: 'Configure the npm client'
@@ -42,6 +45,9 @@ jobs:
       - restore_cache:
           keys:
             - v1-reporter-earl-npm-{{ checksum "packages/reporter-earl/package-lock.json" }}
+      - restore_cache:
+          keys:
+            - v1-react-npm-{{ checksum "packages/react/package-lock.json" }}
       - run: npm ci
       - save_cache:
           key: v1-root-npm-{{ checksum "package-lock.json" }}
@@ -69,6 +75,10 @@ jobs:
           paths:
             - packages/reporter-earl/node_modules
       - save_cache:
+          key: v1-react-npm-{{ checksum "packages/react/package-lock.json" }}
+          paths:
+            - packages/react/node_modules
+      - save_cache:
           key: v1-npm-cache-{{ .Environment.CIRCLE_SHA1 }}
           paths:
             - node_modules
@@ -77,6 +87,9 @@ jobs:
             - packages/webdriverjs/node_modules
             - packages/webdriverio/node_modules
             - packages/reporter-earl/node_modules
+            - packages/react/node_modules
+            - packages/react/example/node_modules
+            - packages/react/.cache
 
   lint:
     <<: *defaults
@@ -115,12 +128,22 @@ jobs:
       - checkout
       - restore_dependency_cache
       - run: npm run test --prefix=packages/webdriverio
+
   reporter-earl:
     <<: *defaults
     steps:
       - checkout
       - restore_dependency_cache
       - run: npm run test --prefix=packages/reporter-earl
+
+  react:
+    <<: *defaults
+    executor: cypress/base-10
+    steps:
+      - checkout
+      - restore_dependency_cache
+      - run: npm run build --prefix=packages/react
+      - run: npm run test --prefix=packages/react
 
   canary_release:
     <<: *defaults
@@ -131,6 +154,8 @@ jobs:
       # Make sure the working tree is clean
       - run: git reset --hard HEAD
       - run: npx lerna publish prepatch --no-verify-access --no-git-tag-version --no-push --canary --dist-tag=next --exact --force-publish --yes
+      # Verify that @axe-core/react has all requires files
+      - run: .circleci/verify-release.sh post
 
   production_release:
     <<: *defaults
@@ -141,6 +166,8 @@ jobs:
       # Make sure the working tree is clean
       - run: git reset --hard HEAD
       - run: npx lerna publish --force-publish='*' --yes
+      # Verify that @axe-core/react has all requires files
+      - run: .circleci/verify-release.sh post
 
 workflows:
   version: 2
@@ -165,6 +192,9 @@ workflows:
       - reporter-earl:
           requires:
             - lint
+      - react:
+          requires:
+            - lint
       - canary_release:
           context: html-tools
           requires:
@@ -175,6 +205,7 @@ workflows:
             - webdriverjs
             - webdriverio
             - reporter-earl
+            - react
           filters:
             branches:
               only: 
@@ -189,6 +220,7 @@ workflows:
             - webdriverjs
             - webdriverio
             - reporter-earl
+            - react
           filters:
             branches:
               only: master
