--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -22,7 +22,7 @@
     "test:cypress": "start-server-and-test start-server http://localhost:8080 test:run",
     "start-server": "cd example && npm run start",
     "test:run": "cypress run",
-    "test:debug": "cypress open",
+    "test:debug": "cypress open"
   },
   "keywords": [
     "accessibility",
@@ -56,22 +56,11 @@
   "devDependencies": {
     "@types/react": "^16.9.20",
     "@types/requestidlecallback": "^0.3.1",
-    "@typescript-eslint/eslint-plugin": "^2.20.0",
-    "@typescript-eslint/parser": "^2.20.0",
     "cypress": "^3.8.3",
     "cypress-shadow-dom": "^1.3.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.18.3",
     "http-server": "^0.11.1",
-    "husky": "^3.1.0",
-    "lint-staged": "^9.5.0",
-    "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "standard-version": "^8.0.1",
     "start-server-and-test": "^1.10.8",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
