--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -17,7 +17,7 @@
     "prepare": "npm run build",
     "install:example": "cd example && npm install",
     "pretest": "npm run install:example",
-    "test": "eslint index.ts after.ts && tsc && npm run test:types && npm run test:cypress",
+    "test": "tsc && npm run test:types && npm run test:cypress",
     "test:types": "cd test && tsc",
     "test:cypress": "start-server-and-test start-server http://localhost:8080 test:run",
     "start-server": "cd example && npm run start",
