--- a/packages/puppeteer/package.json
+++ b/packages/puppeteer/package.json
@@ -42,7 +42,7 @@
     "typescript": "^3.1.6"
   },
   "dependencies": {
-    "axe-core": "^4.0.0-canary.83056ad"
+    "axe-core": "^4.0.1"
   },
   "peerDependencies": {
     "puppeteer": "^1.10.0 || ^2.0.0"
