--- a/packages/webdriverjs/package.json
+++ b/packages/webdriverjs/package.json
@@ -77,7 +77,7 @@
     "sinon": "^7.3.2"
   },
   "dependencies": {
-    "axe-core": "^4.0.0-canary.83056ad",
+    "axe-core": "^4.0.1",
     "babel-runtime": "^6.26.0"
   },
   "nyc": {
