--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,10 @@ jobs:
       - restore_cache:
           keys:
             - v1-reporter-earl-npm-{{ checksum "packages/reporter-earl/package-lock.json" }}
+      - restore_cache:
+          keys:
+            - v1-axe-core-test-npm-{{ checksum "axe_core_test/package-lock.json" }}
+      
       - run: npm ci
       - save_cache:
           key: v1-root-npm-{{ checksum "package-lock.json" }}
@@ -69,6 +73,10 @@ jobs:
           paths:
             - packages/reporter-earl/node_modules
       - save_cache:
+          key: v1-axe-core-test-npm-{{ checksum "axe_core_test/package-lock.json" }}
+          paths:
+            - axe_core_test/node_modules
+      - save_cache:
           key: v1-npm-cache-{{ .Environment.CIRCLE_SHA1 }}
           paths:
             - node_modules
@@ -77,6 +85,7 @@ jobs:
             - packages/webdriverjs/node_modules
             - packages/webdriverio/node_modules
             - packages/reporter-earl/node_modules
+            - axe_core_test/node_modules
 
   lint:
     <<: *defaults
@@ -122,6 +131,13 @@ jobs:
       - restore_dependency_cache
       - run: npm run test --prefix=packages/reporter-earl
 
+  axe-core-test:
+    <<: *defaults
+    steps:
+      - checkout
+      - restore_dependency_cache
+      - run: npm run test --prefix=axe_core_test
+
   canary_release:
     <<: *defaults
     steps:
@@ -163,6 +179,9 @@ workflows:
           requires:
             - lint
       - reporter-earl:
+          requires:
+            - lint
+      - axe-core-test:
           requires:
             - lint
       - canary_release:
