--- a/packages/reporter-earl/package.json
+++ b/packages/reporter-earl/package.json
@@ -30,7 +30,7 @@
     "@types/jest": "^23.3.9",
     "@types/jsonld": "github:types/jsonld",
     "@types/node": "^10.12.0",
-    "axe-core": "^3.1.2-canary.e67fc65",
+    "axe-core": "^4.0.1",
     "clone": "^2.1.2",
     "jest": "^23.6.0",
     "jsonld": "^1.1.0",
