--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -151,7 +151,7 @@ jobs:
       - run: git reset --hard HEAD
       - run: npx lerna publish prepatch --no-verify-access --no-git-tag-version --no-push --canary --dist-tag=next --exact --force-publish --yes
       # Verify that @axe-core/react has all requires files
-      - run: .circleci/verify-release.sh post
+      - run: ./axe-core-npm/packages/react/verify-release.sh post
 
   production_release:
     <<: *defaults
@@ -163,7 +163,7 @@ jobs:
       - run: git reset --hard HEAD
       - run: npx lerna publish --force-publish='*' --yes
       # Verify that @axe-core/react has all requires files
-      - run: .circleci/verify-release.sh post
+      - run: ./axe-core-npm/packages/react/verify-release.sh post
 
 workflows:
   version: 2
