--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ packages/react/example/node_modules
 packages/react/example/build
 packages/react/test/index.js
 packages/react/cypress/screenshots
+packages/react/verify-release-*
