--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 node_modules
 dist
 __tests__
+coverage
 
-packages/react/coverage
-packages/react/example/node_modules
 packages/react/example/build
 packages/react/test/index.js
 packages/react/cypress/screenshots
