--- a/packages/react/example/package.json
+++ b/packages/react/example/package.json
@@ -12,7 +12,7 @@
   "author": "Dylan Barrell (dylan@barrell.com)",
   "license": "MIT",
   "dependencies": {
-    "axe-core": "^3.3.0",
+    "@axe-core/react": "4.0.0-pre.0",
     "create-react-class": "^15.6.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
