--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -55,6 +55,7 @@
   },
   "devDependencies": {
     "@types/react": "^16.9.20",
+    "@types/react-dom": "^16.9.8",
     "@types/requestidlecallback": "^0.3.1",
     "cypress": "^3.8.3",
     "cypress-shadow-dom": "^1.3.0",
