--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ node_modules
 dist
 __tests__
 coverage
+
+packages/react/example/build
+packages/react/test/index.js
+packages/react/cypress/screenshots
+packages/react/verify-release-*
