--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,4 @@
 {
-  "packages": ["packages/*", "axe_core_test"],
+  "packages": ["packages/*", "packages/react/example", "axe_core_test"],
   "version": "4.0.0-pre.0"
 }
