--- a/packages/react/example/package.json
+++ b/packages/react/example/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Example of react-axe with a React.js application",
   "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prestart": "npm run build",
