--- a/packages/react/example/package.json
+++ b/packages/react/example/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "react-axe-example",
+  "name": "@axe-core/react-example",
   "version": "1.0.0",
   "description": "Example of react-axe with a React.js application",
   "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prestart": "npm run build",
