axe-linter ignore

--- a/.github/axe-linter.yml
+++ b/.github/axe-linter.yml
@@ -5,3 +5,4 @@ exclude:
   - packages/react/CHANGELOG.md
   - packages/react/example/**/*
   - packages/react/cypress/**/*
+  - packages/cli/test/**/*
